--- a/events.html
+++ b/events.html
@@ -26,105 +26,105 @@
                     <img src="assets/images/logo.png" alt="logo">
                 </div>
                 <div class="menu d-none d-lg-block me-3">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link">
-                                Trang chủ
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="about.html" data-bs-toggle="dropdown">
-                                Về chúng tôi
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="events.html">
-                                        Sự kiện về khách hàng
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="blog.html">
-                                        Tin tức
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="gallery.html">
-                                        Thư viện ảnh
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="faqs.html">
-                                        Câu hỏi thường gặp
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                                Dịch vụ
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        Course Menu
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        BBQ
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        Buffet
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        Event catering (Tea-break, Cocktail, Wedding)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        Sharing menu (for big gathering)
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="service.html">
-                                        Delivery/Ready to eat
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="menu.html">
-                                Thực đơn
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link">
-                                Liên hệ
-                            </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-                                Tài khoản
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="#">
-                                        Thông tin tài khoản
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">
-                                        Lịch sử đơn hàng
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">
+                            Trang chủ
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="about.html" data-bs-toggle="dropdown">
+                            Về chúng tôi
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="events.html">
+                                    Sự kiện về khách hàng
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="blog.html">
+                                    Tin tức
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="gallery.html">
+                                    Thư viện ảnh
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="faqs.html">
+                                    Câu hỏi thường gặp
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                            Dịch vụ
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    Course Menu
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    BBQ
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    Buffet
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    Event catering (Tea-break, Cocktail, Wedding)
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    Sharing menu (for big gathering)
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="service.html">
+                                    Delivery/Ready to eat
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="menu.html">
+                            Thực đơn
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">
+                            Liên hệ
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                            Tài khoản
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="info_account.html">
+                                    Thông tin cá nhân
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="change-password.html">
+                                    Đổi mật khẩu
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
                 <div class="action d-flex flex-row align-items-center justify-content-center">
                     <a href="javascript:void(0)" class="btn_cart me-3 has_order">
                         <i class="icofont-cart"></i>
@@ -878,7 +878,25 @@
             </div>
         </div>
     </div>
-</footer>
+</footer><div class="wrap-icon-fixed">
+    <ul>
+        <li>
+            <a href="#">
+                <img src="assets/images/mess.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="assets/images/zalo-icon.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="icofont-cart"></i>
+            </a>
+        </li>
+    </ul>
+</div>
 <script src="assets/js/jquery-main.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/jquery-migrate.js"></script>
