--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="#">
-                                    Thông tin tài khoản
+                                <a class="dropdown-item" href="info_account.html">
+                                    Thông tin cá nhân
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
-                                    Lịch sử đơn hàng
+                                <a class="dropdown-item" href="change-password.html">
+                                    Đổi mật khẩu
                                 </a>
                             </li>
                         </ul>
@@ -1358,7 +1358,29 @@
             </div>
         </div>
     </div>
-</footer>
+</footer><div class="wrap-icon-fixed">
+    <ul>
+        <li>
+            <a href="#">
+                <img src="assets/images/mess.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="assets/images/zalo-icon.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="icofont-cart"></i>
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+
+
 <script src="assets/js/jquery-main.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/jquery-migrate.js"></script>
