--- a/service_food.html
+++ b/service_food.html
@@ -1142,7 +1142,25 @@
             </div>
         </div>
     </div>
-</footer>
+</footer><div class="wrap-icon-fixed">
+    <ul>
+        <li>
+            <a href="#">
+                <img src="assets/images/mess.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="assets/images/zalo-icon.png" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="icofont-cart"></i>
+            </a>
+        </li>
+    </ul>
+</div>
 <script src="assets/js/jquery-main.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/jquery-migrate.js"></script>
