--- a/cart.html
+++ b/cart.html
@@ -126,6 +126,9 @@
                 </ul>
             </div>
             <div class="action d-flex flex-row align-items-center justify-content-center">
+                <a href="login.html" class="btn-default me-4">
+                    Đăng nhập
+                </a>
                 <a href="javascript:void(0)" class="btn_cart me-3 has_order">
                     <i class="icofont-cart"></i>
                 </a>
