--- a/gallery.html
+++ b/gallery.html
@@ -129,9 +129,12 @@
                 </ul>
             </div>
                 <div class="action d-flex flex-row align-items-center justify-content-center">
-                    <a href="javascript:void(0)" class="btn_cart me-3 has_order">
-                        <i class="icofont-cart"></i>
-                    </a>
+                <a href="login.html" class="btn-default me-4">
+                    Đăng nhập
+                </a>
+                <a href="javascript:void(0)" class="btn_cart me-3 has_order">
+                    <i class="icofont-cart"></i>
+                </a>
                     <a href="javascript:void(0)" class="toggle-menu-link d-lg-none">
                         <i class="icofont-navigation-menu"></i>
                     </a>
