--- a/about.html
+++ b/about.html
@@ -1095,8 +1095,8 @@
                         galleryId: "nature",
                         plugins: [lgZoom, lgThumbnail],
                         mobileSettings: {
-                            controls: false,
-                            showCloseIcon: false,
+                            controls: true,
+                            showCloseIcon: true,
                             download: false,
                             rotate: false
                         }
