--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 <body class="bl_frontend">
 <header class="header">
     <div class="container">
-        <div class="wrapper d-flex flex-row align-items-center justify-content-between">
+        <div class="wrapper d-flex flex-row align-items-center justify-content-end justify-content-lg-between">
             <div class="logo me-3">
-                <img src="assets/images/logo.png" alt="logo">
+                <a href="">
+                    <img src="assets/images/logo.png" alt="logo">
+                </a>
             </div>
             <div class="menu d-none d-lg-block me-3">
                 <ul class="nav">
@@ -126,9 +128,6 @@
                 </ul>
             </div>
             <div class="action d-flex flex-row align-items-center justify-content-center">
-                <a href="login.html" class="btn-default me-4">
-                    Đăng nhập
-                </a>
                 <a href="javascript:void(0)" class="btn_cart me-3 has_order">
                     <i class="icofont-cart"></i>
                 </a>
@@ -602,6 +601,7 @@
         </div>
     </div>
 </header>
+
 <main class="main">
     <!-- parallax section -->
     <section class="section-slider" id="section-slider" class="fullwidthbanner-container" aria-label="section-slider">
