--- a/cart.html
+++ b/cart.html
@@ -21,9 +21,11 @@
 <body class="bl_frontend">
 <header class="header">
     <div class="container">
-        <div class="wrapper d-flex flex-row align-items-center justify-content-between">
+        <div class="wrapper d-flex flex-row align-items-center justify-content-end justify-content-lg-between">
             <div class="logo me-3">
-                <img src="assets/images/logo.png" alt="logo">
+                <a href="">
+                    <img src="assets/images/logo.png" alt="logo">
+                </a>
             </div>
             <div class="menu d-none d-lg-block me-3">
                 <ul class="nav">
@@ -126,9 +128,6 @@
                 </ul>
             </div>
             <div class="action d-flex flex-row align-items-center justify-content-center">
-                <a href="login.html" class="btn-default me-4">
-                    Đăng nhập
-                </a>
                 <a href="javascript:void(0)" class="btn_cart me-3 has_order">
                     <i class="icofont-cart"></i>
                 </a>
@@ -334,8 +333,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -362,8 +360,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -390,8 +387,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -425,8 +421,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -453,8 +448,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -481,8 +475,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -519,8 +512,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -547,8 +539,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -575,8 +566,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -611,6 +601,7 @@
         </div>
     </div>
 </header>
+
 <main class="main">
     <div class="section-banner">
         <div class="section-main-bg" style="background-image: url('assets/images/breadcrumb-img.jpg')">
