--- a/service.html
+++ b/service.html
@@ -21,9 +21,11 @@
 <body class="bl_frontend">
 <header class="header">
     <div class="container">
-        <div class="wrapper d-flex flex-row align-items-center justify-content-between">
+        <div class="wrapper d-flex flex-row align-items-center justify-content-end justify-content-lg-between">
             <div class="logo me-3">
-                <img src="assets/images/logo.png" alt="logo">
+                <a href="">
+                    <img src="assets/images/logo.png" alt="logo">
+                </a>
             </div>
             <div class="menu d-none d-lg-block me-3">
                 <ul class="nav">
@@ -126,9 +128,6 @@
                 </ul>
             </div>
             <div class="action d-flex flex-row align-items-center justify-content-center">
-                <a href="login.html" class="btn-default me-4">
-                    Đăng nhập
-                </a>
                 <a href="javascript:void(0)" class="btn_cart me-3 has_order">
                     <i class="icofont-cart"></i>
                 </a>
@@ -334,8 +333,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -362,8 +360,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -390,8 +387,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -425,8 +421,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -453,8 +448,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -481,8 +475,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -519,8 +512,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -547,8 +539,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -575,8 +566,7 @@
                                     <a href="javascript:void(0);" class="btn_minus_sl">
                                         <i class="icofont-minus"></i>
                                     </a>
-                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl"
-                                           value="1">
+                                    <input type="number" class="form-control inp_sl" id="inp_sl" name="inp_sl" value="1">
                                     <a href="javascript:void(0);" class="btn_plus_sl">
                                         <i class="icofont-plus"></i>
                                     </a>
@@ -940,8 +930,8 @@
                         </div>
                         <div class="wrapper">
                             <div class="row">
-                                <div class="col-6 col-lg-12 item">
-                                    <div class="d-flex flex-column flex-lg-row align-items-center">
+                                <div class="col-12 item">
+                                    <div class="d-flex flex-row align-items-lg-center justify-content-between">
                                         <div class="image">
                                             <img src="assets/images/pdt13.jpg" alt="">
                                             <!-- có rank-a rank-b rank-c rank-d rank-e e css rùi :))-->
@@ -971,8 +961,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-lg-12 item">
-                                    <div class="d-flex flex-column flex-lg-row align-items-center">
+                                <div class="col-12 item">
+                                    <div class="d-flex flex-row align-items-lg-center justify-content-between">
                                         <div class="image">
                                             <img src="assets/images/pdt13.jpg" alt="">
                                             <!-- có rank-a rank-b rank-c rank-d rank-e e css rùi :))-->
@@ -1002,8 +992,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-lg-12 item">
-                                    <div class="d-flex flex-column flex-lg-row align-items-center">
+                                <div class="col-12 item">
+                                    <div class="d-flex flex-row align-items-lg-center justify-content-between">
                                         <div class="image">
                                             <img src="assets/images/pdt13.jpg" alt="">
                                             <!-- có rank-a rank-b rank-c rank-d rank-e e css rùi :))-->
