--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <i class="icofont-close-circled"></i>
             </a>
         </div>
-        <div class="wrapper">
+        <div class="wrapper scrollable-div">
             <!-- dat mon the dich vu -->
             <div class="item_cart">
                 <div class="title_service">
